# TestU01

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  COPYING.txt  README.md
.github/workflows/: build.yml
.reuse/: dep5
LICENSES/: LicenseRef-fftc.txt  LicenseRef-testu01.txt  LicenseRef-tu01_sha1.txt
doc/: NEWS.TestU01
doc/guide-probdist/: copyright.tex
doc/guide-testu01/: bintro.tex
examples/: CMakeLists.txt  bat1.c  bat2.c  bat3.c  birth1.c  birth2.c  ex1.c  ex3.c  ex4.c  ex7.c  fbirth.c  fcoll.c  mrg32k3a.c  my16807.c  my16807.h  scat.c  scat2.c  xorshift.c
include/: CMakeLists.txt  TestU01.h  config.h.in  gdefconf.h.in
include/TestU01/: TestU01.h  addstr.h
mylib/: addstr.c  bitset.c  chrono.c  gdef.c  gdef.tex  mystr.c  num.c  num2.c  tables.c  tcode.c  util.c  util.tex
probdist/: fbar.c  fdist.c  fdist.tex  finv.c  fmass.c  gofs.c  gofw.c  wdist.c
src/: CMakeLists.txt
src/mylib/: addstr.c  addstr.tex  bitset.c  bitset.tex  chrono.c  chrono.tex  gdef.c  gdef.tex  mystr.c  num.c  num.tex  num2.c  num2.tex  tables.c  tables.tex  tcode.c  util.c  util.tex
src/probdist/: fbar.c  fbar.tex  fdist.c  fdist.tex  finv.c  finv.tex  fmass.c  gofs.c  gofs.tex  gofw.c  gofw.tex  statcoll.c  wdist.c  wdist.tex
src/testu01/: bbattery.c  bbattery.tex  fcho.c  fcong.c  fcong.tex  ffam.c  ffam.tex  ffsr.c  ffsr.tex  fintro.tex  fknuth.c  fknuth.tex  fmarsa.c  fmarsa.tex  fmultin.c  fmultin.tex  fnpair.c  fnpair.tex  fres.c  fres.tex  fspectral.c  fstring.c  fstring.tex  ftab.c  ftab.tex  fvaria.c  fvaria.tex  fwalk.c  fwalk.tex  rijndael-alg-fst.c  rijndael-alg-fst.tex  scatter.c  scatter.tex  scomp.c  scomp.tex  sentrop.c  sentrop.tex  sintro.tex  sknuth.c  sknuth.tex  (+75 more)
test/: CMakeLists.txt  README.md  addstr.c  gen_runner.py  test.h  test_files.cmake
testu01/: bbattery.c  fcho.c  ffam.c  ffsr.c  fftc.c  fknuth.c  fmarsa.c  fmarsa.tex  fmultin.c  fmultin.tex  fnpair.c  fres.c  fres.tex  fspectral.c  fstring.c  ftab.c  ftab.tex  fvaria.c  fwalk.c  scatfig.tex  scatter.c  scatter.tex  scomp.c  sentrop.c  sknuth.c  sknuth.tex  smarsa.c  smarsa.tex  smultin.c  snpair.c  snpair.tex  sspacings.c  sspectral.c  sstring.c  sstring.tex  svaria.c  svaria.tex  swalk.c  swrite.c  swrite.tex  (+31 more)
utils/: extract-header-text.py  run-clang-format.py
